tests/paczka2/big_fuzzy/97534811.err
Error in line 5: dwlc0ìktrq S240 47,9
Error in line 9: CRdKoDF2kq A191 40,9
Error in line 12: p98PrZ A191 41,6
Error in line 13: PFp17N7Y3 S135 285,9
Error in line 20: il8jJyg S135 72,0
Error in line 26: PFp17N7Y3 A382 -1,1
Error in line 24: mQ1Mq S135 71,8
Error in line 19: PFp17N7Y3 A382 23,1
Error in line 38: dwlc0pktrq S240 1,12
Error in line 41: PFp17N7Y3 S135 42,3
Error in line 68: il8jJyg S240 27,6
Error in line 85: il8jJyg S135 63,9
Error in line 107: il8jJyg S135 24,14
Error in line 111: A191 S240 0,2
Error in line 115: A191 A191 22,9
Error in line 128: p98PrZ A191 95,6
Error in line 142: PFp17N7Y3 S240 42,6
Error in line 140: il8jJyg A382 11,8
Error in line 158: il8jJyg A382 48,2
Error in line 161: dwlc0pktrq A191 0,2
Error in line 166: dwlc0pktrq S240 72,1
Error in line 157: CRdKoDF2kq S240 79,8
Error in line 159: A191 S240 55,1
Error in line 175: A191 S135 3,1
Error in line 177: A191 A382 26,9
Error in line 180: A191 A191 3,7
Error in line 184: il8jJyg A191 361,95
Error in line 190: mQ1Mq A382 82,2
Error in line 191: p98PrZ A191 62,9
Error in line 197: il8jJyg A191 330,0
Error in line 211: p98PrZ A382 74,9
Error in line 217: p98PrZ A382 59,8
Error in line 235: A191 S135 78,0
Error in line 244: CRdKoDF2kq A382 21,3
